--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@reduxjs/toolkit": "^2.5.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^5.3.4",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
