--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^5.3.4",
+    "react-toastify": "^11.0.3",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
